--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>React Widgets</title>
+  <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" type="text/css" href="main.css">
   <script src="bundle.js"></script>
 </head>
 <body>
-  <div id="main">
+  <div id="main" class="main">
     
   </div>
 </body>
