--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>React Widgets</title>
   <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="animation.css">
   <script src="bundle.js"></script>
 </head>
 <body>
